--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.1",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "os-utils": "^0.0.14",
     "pug": "^3.0.2",
+    "sharp": "^0.33.0",
     "socket.io": "^4.7.2",
     "systeminformation": "^5.21.17",
     "validator": "^13.11.0"
